--- a/screenalign.css
+++ b/screenalign.css
@@ -71,6 +71,9 @@
         .footer4{margin-top: 30px;}
         .footer4:hover{cursor: none;}
     }
+    @media screen and (min-width:320px) and (max-width:729px){
+        .topices{display:none;}
+    }
     @media screen and (min-width:375px) and (max-width:425px){
         .searchdiv{margin-left: 30px;}
         .topices1{margin-left: 30px;}
