--- a/screenalign.css
+++ b/screenalign.css
@@ -5,7 +5,7 @@
         header{padding-left: 10px;font-size: 30px;}
         a{font-size:20px;color: rgb(21, 99, 147);}
         .topices{display:flex; flex-direction:column;justify-content:center;padding-left: 5px;font-size:20px;display:none;}
-        #buttons{border:none;margin-left:49%;position: fixed;top:20px;left:39%;display:block}
+        #buttons{border:none;margin-left:49%;position: absolute;top:20px;left:39%;display:block}
         a:hover{color: #075f6e;}
         .header{background: linear-gradient(to top, #6dd5ed, #2193b0);}
         .title{font-size:30px;}
